--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -73,6 +73,7 @@
   font-weight: bold;
   cursor: pointer;
   padding: 6px 14px;
+  gap: 10px;
 }
 
 .btn-login {
@@ -141,6 +142,10 @@
     margin: 0;
     width: 100%;
     max-width: 100%;
+  }
+
+  .barra-pesquisa input::placeholder {
+    font-size: 12px;
   }
 
   .nav-box-login-comprar {
